--- a/index.html
+++ b/index.html
@@ -6,11 +6,13 @@
   <title>Challenge: Famous font formats</title>
   <style>
     .declaration {
+font-weight:bold;
+      font-family:fantasy;
 
     }
 
     .quote {
-      
+      font-style: italic;
     }
   </style>
 </head>
